fixed menu on mobile

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -87,6 +87,7 @@ font-size: 12px;
     #menu.menu_visible{
       width:100%;
     }
+    #menu_filters a{font-size:12px;margin-right:1em !important;}
 }
 @media only screen and (min-width: 1920px) {
     #menu.menu_visible{
